metrica de promedio de tiempo por estado y detalle de tiempo por estados
