# src/metrics/metricsRoutes.ts
@@ -1,7 +1,9 @@
 import { Router } from 'express';
 import {
+  getAverageTimeByState,
   getAverageTicket,
   getDeliveryTimeConcentration,
+  getDeliveredOrdersStateDetails,
   getTotalBilling
 } from './metricsController';
 
@@ -9,6 +11,8 @@ const router = Router();
 
 router.get('/total-billing', getTotalBilling);
 router.get('/average-ticket', getAverageTicket);
+router.get('/average-time-by-state', getAverageTimeByState);
+router.get('/state-details/:stateId', getDeliveredOrdersStateDetails);
 router.get('/delivery-time-concentration', getDeliveryTimeConcentration);
 
 export default router;
